--- a/assets/app.css
+++ b/assets/app.css
@@ -17,6 +17,9 @@
 .container {
   width: 100%;
 }
+.mx-auto {
+  margin-inline: auto;
+}
 .block {
   display: block;
 }
@@ -44,8 +47,17 @@
 .resize {
   resize: both;
 }
+.flex-col {
+  flex-direction: column;
+}
 .flex-wrap {
   flex-wrap: wrap;
+}
+.items-center {
+  align-items: center;
+}
+.justify-center {
+  justify-content: center;
 }
 .truncate {
   overflow: hidden;
